# vocata

./: .gitignore  .gitmodules  .woodpecker.yml  Dockerfile  README.md  config.toml  docker-compose.yml  graph.db  information-schema.ttl  mkdocs.yml  pyproject.toml  test.py
.reuse/: dep5
content/: _index.md
content/docs/: _index.md
content/docs/appendix/: _index.md
content/docs/introduction/: about.md  graph.md
content/docs/server/: installation.md  prefixes-actors.md
docs/: .domains  .rsyncignore  LICENSE  README.md  conf.py  config.toml  index.rst  information-schema.ttl
docs/appendix/: logo.rst  standards.rst
docs/content/: _index.md
docs/content/docs/: _index.md
docs/content/docs/appendix/: _index.md  logo.md  standards.md
docs/content/docs/introduction/: _index.md  about.md  architecture.md  c4_component.puml  c4_container.puml  c4_context.puml  graph.md  transport.md
docs/content/docs/server/: _index.md  basic-design.md  installation.md  prefixes-actors.md  security.md
docs/introduction/: about.rst  graph.rst  transport.rst
docs/server/: architecture.rst  basic-design.rst  c4_component.puml  c4_container.puml  c4_context.puml  installation.rst  prefixes-actors.rst  security.rst
docs/static/: vocata.svg.license
tests/: conftest.py
tests/graph/: test_activities_c2s.py  test_admin_func.py  test_collections.py  test_fsck.py  test_get_object.py
tests/server/: schema.py  test_get_object.py  test_web.py  test_webfinger.py
tests/util/: test_http.py  test_types.py
vocata/: default_settings.toml  settings.py
vocata/admin/: app.py  auth.py  handlers_auth.py  handlers_tools.py  utils.py
vocata/admin/templates/: index.html  login.html  redirect.html
vocata/admin/templates/advanced/: index.html  tools.html
vocata/admin/templates/base/: base.html
vocata/admin/templates/partials/: navigation.html
vocata/api/: __init__.py  endpoint.py  middleware.py
vocata/api/endpoints/: activitypub.py  nodeinfo.py  well_known.py
vocata/cli/: __init__.py  actor.py  data.py  federation.py  prefix.py
vocata/data/: __init__.py  graph.py  util.py
vocata/graph/: __init__.py  activity.py  activitypub.py  actor.py  admin.py  authz.py  collections.py  federation.py  fsck.py  jsonld.py  prefix.py  schema.py
vocata/server/: __init__.py  activitypub.py  app.py  auth.py  metrics.py  middleware.py  nodeinfo.py  oauth.py  proxy.py  server.py  signin.py  webfinger.py
vocata/server/admin/: main.py  users.py
vocata/server/endpoints/: nodeinfo.py  webfinger.py  well_known.py
vocata/server/federation/: client.py
vocata/server/web/static/css/: admin.css
vocata/server/web/templates/: login.html
vocata/server/web/templates/admin/: base.html  dashboard.html  user-edit.html  users.html
vocata/server/web/templates/admin/partials/: sparql-results.html  user-form.html
vocata/server/web/templates/partials/: footer.html  user-menu.html
vocata/util/: __init__.py  http.py  types.py
