[tool.poetry]
name = "vocata"
version = "0.1.0"
description = "Vocabulary Agnostic Transport Agent"
authors = ["Dominik George <nik@naturalnet.de>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://vocata.one/"
repository = "https://codeberg.org/Vocata/vocata"
keywords = ["activitypub", "fediverse"]

[tool.poetry.dependencies]
python = "^3.11"
# FIXME revert to stable release after 6.4.0
rdflib = { git = "https://github.com/RDFLib/rdflib.git" }
rdflib-sqlalchemy = "^0.5.4"
pyld = "^2.0.3"
requests = "^2.28.2"
requests-http-message-signatures = "^0.3.1"
cryptography = "^40.0.1"
starlette = { version = "^0.26.1", optional = true }
uvicorn = { version = "^0.21.1", optional = true }
typer = {version = "^0.7.0", optional = true, extras = ["all"]}
shortuuid = "^1.0.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"

[tool.poetry.extras]
server = ["starlette", "uvicorn"]
cli = ["typer"]

[tool.poetry.scripts]
vocata-cli = { callable = "vocata.cli:app", extras = ["cli"] }
vocata-server = { callable = "vocata.server.server:run_server", extras = ["server"] }

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
