[tool.poetry]
name = "vocata"
version = "0.1.0"
description = "Vocabulary Agnostic Transport Agent"
authors = ["Dominik George <nik@naturalnet.de>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://vocata.one/"
repository = "https://codeberg.org/Vocata/vocata"
keywords = ["activitypub", "fediverse"]

[tool.poetry.dependencies]
python = "^3.11"
# FIXME revert to stable release after 6.4.0
rdflib = { git = "https://github.com/RDFLib/rdflib.git" }
rdflib-sqlalchemy = "^0.5.4"
pyld = "^2.0.3"
requests = "^2.28.2"
cryptography = "^40.0.1"
starlette = { version = "^0.26.1", optional = true }
uvicorn = { version = "^0.21.1", optional = true }
typer = {version = "^0.7.0", optional = true, extras = ["all"]}
shortuuid = "^1.0.11"
dynaconf = {version = "^3.1.12", extras = ["toml"]}
oic = {version = "^1.5.0", optional = true}
passlib = {version = "^1.7.4", optional = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = { version = "^0.21.2", extras = ["python"] }
mkdocs-mermaid2-plugin = "^0.6.0"

[tool.poetry.extras]
server = ["starlette", "uvicorn", "oic", "passlib"]
cli = ["typer"]

[tool.poetry.scripts]
vocatactl = { callable = "vocata.cli:app", extras = ["cli"] }
vocata = { callable = "vocata.server.server:run_server", extras = ["server"] }

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
