[tool.poetry]
name = "vocata"
version = "0.2.1"
description = "Vocabulary Agnostic Transport Agent"
authors = ["Dominik George <nik@naturalnet.de>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://vocata.one/"
repository = "https://codeberg.org/Vocata/vocata"
keywords = ["activitypub", "fediverse"]
include = [
    { path = "docs", format = "sdist" },
    { path = "mkdocs.yml", format = "sdist" },
    { path = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.11"
# FIXME revert to stable release after 6.4.0
rdflib = { git = "https://github.com/RDFLib/rdflib.git" }
rdflib-sqlalchemy = "^0.5.4"
pyld = "^2.0.3"
requests = "^2.28.2"
cryptography = "^40.0.1"
starlette = { version = "^0.26.1", optional = true }
uvicorn = { version = "^0.21.1", optional = true }
typer = {version = "^0.7.0", optional = true, extras = ["all"]}
shortuuid = "^1.0.11"
dynaconf = {version = "^3.1.12", extras = ["toml"]}
passlib = {version = "^1.7.4", optional = true}
prometheus-client = {version = "^0.16.0", optional = true}
psycopg2-binary = {version = "^2.9.6", optional = true}
python-multipart = {version = "^0.0.6", optional = true}
ipython = {version = "^8.13.1", optional = true}
jinja2 = "^3.1.2"
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
pydantic = "^1.10.7"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"



[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"
sphinxcontrib-plantuml = "^0.25"
piccolo-theme = "^0.15.0"

[tool.poetry.extras]
server = ["starlette", "uvicorn", "passlib", "prometheus-client", "python-multipart", "jinja2", "itsdangerous"]
cli = ["ipython", "typer"]
postgresql = ["psycopg2-binary"]

[tool.poetry.scripts]
vocatactl = { callable = "vocata.cli:app", extras = ["cli"] }
vocata = { callable = "vocata.server.server:run_server", extras = ["server"] }

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=vocata",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
